--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "@types/ws": "^8.5.4",
     "antd": "^5.3.3",
     "antd-img-crop": "^4.11.1",
     "bcrypt": "^5.1.0",
@@ -37,7 +38,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
     "socket.io": "^4.6.1",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
